--- a/index.html
+++ b/index.html
@@ -6,28 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>A empresa</h2>
-    <p>Empresa de documentação</p>
-    <hr>
-
-    <h2>Documentos</h2>
-    <ol>
-        <li>Arrebdamento</li>
-        <li>Proposta</li>
-        <li>Ate de assenbleias</li>
-    </ol>
-    <hr>
-    
-    <h2>O que os clientes esta a dizer</h2>
-    <em>Contratos rapidos</em><br>
-    <strong>Maria Almeida</strong>
-    <hr>
-
-    <h2>Mapa do site</h2>
-    <ul>
-        <li>Home</li>
-        <li>Quem somos</li>
-        <li>Contato</li>
-    </ul>
+   <img src="./img/ferrari.jpg" alt="Uma Ferrari futurista cinza ou prata">
 </body>
 </html>
