--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina Inicial</title>
 </head>
 <body>
-   <img src="./img/ferrari.jpg" alt="Uma Ferrari futurista cinza ou prata">
+    <a href="">
+        Home </a> /
+    <a href="Contato.html">
+        Clique aqui
+    </a>
+  <h2>Página princinpal</h2>
+
+    <p>Aqui esta um link</p>
+     
+    <a href="https:www.google.com">
+        Clique aqui para ir para o google
+    </a>
 </body>
 </html>
