--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,8 @@
     <a href="Contato.html">contato</a>/
     <a href="Praticar.html">Praticar</a>/
     <a href="Imagen.html">Imagem</a>/
-    <a href="formulario.html">formulario</a>
+    <a href="formulario.html">formulario</a>/
+    <a href="Caracteresespeciais.html"></a>
 
 
     
